(lang dune 3.12)

(name julia_set)

(generate_opam_files true)

(source
 (github mdales/claudius))

(authors "Michael Dales <michael@digitalflapjack.com>")

(maintainers "Michael Dales <michael@digitalflapjack.com>")

(license ICS)

(documentation https://url/to/documentation)

(package
 (name julia_set)
 (synopsis "An example on Julia Set")
 (description "Julia Sets are intricate fractal shapes that arise from iterating a simple mathematical formula in the complex plane.")
 (depends ocaml dune)
 (tags
  (graphics rendering paletted)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
