(lang dune 3.17)

(name paint)

(source
 (github ClaudiusFX/claudius))

(authors "Michael Dales <michael@digitalflapjack.com>")

(maintainers "Michael Dales <michael@digitalflapjack.com>" "Shreya Pawaskar <shreya.pawaskar.main@gmail.com>")

(license ICS)

(documentation https://github.com/claudiusFX/claudius-examples/tree/main/paint)

(package
 (name paint)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  (graphics rendering paletted)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
