(lang dune 3.12)

(name polygontest)

(source
 (github ClaudiusFX/claudius))

(authors "Michael Dales <michael@digitalflapjack.com>")

(maintainers "Michael Dales <michael@digitalflapjack.com>" "Shreya Pawaskar <shreya.pawaskar.main@gmail.com>")

(license ICS)

(documentation https://github.com/claudiusFX/claudius-examples/tree/main/polygontest)

(package
 (name polygontest)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (graphics rendering paletted)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
